add generating tasks and parsing them to dtro